--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -32,7 +32,7 @@ jobs:
        python -m pip config set install.trusted-host mirrors.aliyun.com
 
     - name: Build Site
-      run: hugo
+      run: hugo --minify
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
