--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: latest
+        hugo-version: v0.83.1
 
     - name: Setup Python
       uses: actions/setup-python@v2
