--- a/config.yaml
+++ b/config.yaml
@@ -45,7 +45,7 @@ params:
   # Comments settings
   comments:
     enabled: true
-    provider: giscus
+    provider: valine
 
     giscus:
       repo: WingLim/hugo-tania
@@ -53,6 +53,18 @@ params:
       category:
         name: Comments
         id: DIC_kwDOEtnPc84B_WKP
+
+    valine:
+      enable: true # 如果你想使用valine，请将值设置为 true
+      appId:  JbHqRp2eMrTgIwYpfERH0g79-gzGzoHsz
+      appKey: VsiKvLuiBGvJL1XrAfv7siY2
+      notify: true # Mail notify
+      verify: true # Verify code
+      avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+      placeholder: 欢迎在这里留下你的评论... # Comment Box placeholder
+      guest_info: nick,mail,link # Comment header info
+      pageSize: 10 # comment list page size
+      requiredFields: ['nick','mail']
 
 menu:
   header:
