增加社交媒体图标 & 修改样式

--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,9 @@ params:
     email: qinyuanpei@163.com
     facebook:
     github: https://github.com/qinyuanpei
+    douban: https://www.douban.com/people/60029335/
+    weibo: https://weibo.com/1278609231/profile
+    zhihu: https://www.zhihu.com/people/qinyuanpei
     instagram:
     linkedin:
     medium:
