--- a/themes/hugo-tania/data/friends.yaml
+++ b/themes/hugo-tania/data/friends.yaml
@@ -18,11 +18,23 @@ links:
    desc: 咕咚
    link: https://gudong.site
    avatar: https://gudong.site/static/img/logo.jpg
+   
  - title: 小凡梦
    desc: 小凡梦
    link: https://www.xiaofm.cn
    avatar: https://sdn.geekzu.org/avatar/2470b24d1a3f90b894ebe3be22bcc17b?s=100
+
  - title: Wacky小恺
    desc: Wacky小恺
    link: https://www.zhihu.com/column/c_171835756
    avatar: https://pic1.zhimg.com/v2-d8d314ee908925b1bb2a968c920492d1_xl.jpg
+
+ - title:  Randy's Blog
+   desc: Randy's Blog
+   link: https://lutaonan.com/
+   avatar: https://gbstatic.djyde.com/assets/IMG_9051.JPG
+
+ - title: Airing 的小屋
+   desc: Airing 的小屋
+   link: https://me.ursb.me/
+   avatar: https://guanqr.com/images/friends/senorui.png
