--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ DefaultContentLanguage: zh-cn
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
-hasCJKLanguage: false
+hasCJKLanguage: true
 
 permalinks:
     post: /posts/:slug/
@@ -135,6 +135,7 @@ params:
         enabled:
             - search
             - archives
+            - categories
             - tag-cloud
         archives:
             limit: 5
@@ -144,6 +145,10 @@ params:
             limit: 25
             showIcon: false
         toc:
+            showIcon: false
+
+        categories:
+            limit: 5
             showIcon: false
 
     opengraph:
