--- a/config.yaml
+++ b/config.yaml
@@ -55,7 +55,7 @@ params:
 
     comments:
         enabled: true
-        provider: disqus
+        provider: valine
 
         disqusjs:
             shortname:
@@ -97,6 +97,17 @@ params:
             placeholder:
             locale:
                 admin: Admin
+        
+        valine: 
+            appId:  JbHqRp2eMrTgIwYpfERH0g79-gzGzoHsz
+            appKey: VsiKvLuiBGvJL1XrAfv7siY2
+            notify: true # Mail notify
+            verify: true # Verify code
+            avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+            placeholder: 欢迎在这里留下你的评论... # Comment Box placeholder
+            guest_info: nick,mail,link # Comment header info
+            pageSize: 10 # comment list page size
+            requiredFields: ['nick','mail']
 
         twikoo:
             envId:
