修改文章详情页(single.html)布局

--- a/config.yaml
+++ b/config.yaml
@@ -145,6 +145,7 @@ params:
     widgets:
         enabled:
             - search
+            - toc
             - archives
             - categories
             - tag-cloud
