--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-﻿baseurl: https://hugo-blog-tan.vercel.app/
+﻿baseurl: https://blog.yuanpei.me/
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 10
