--- a/config.yaml
+++ b/config.yaml
@@ -52,6 +52,7 @@ params:
         math: true
         toc: true
         readingTime: true
+        sharejs: true
         license:
             enabled: true
             default: Licensed under CC BY-NC-SA 4.0
