开启图像处理

--- a/config.yaml
+++ b/config.yaml
@@ -203,9 +203,9 @@ params:
 
     imageProcessing:
         cover:
-            enabled: false
+            enabled: true
         content:
-            enabled: false
+            enabled: true
 
     jsdelivr:
         enable: true
