文章内图片启用 CDN

--- a/config.yaml
+++ b/config.yaml
@@ -33,6 +33,7 @@ params:
     featuredImageField: image
     rssFullContent: true
     favicon:
+    publicCDN: //cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master
 
     footer:
         since: 2014
