--- a/config.yaml
+++ b/config.yaml
@@ -209,10 +209,10 @@ params:
             enabled: true
     
     debugger:
-        enable: true
-        
+        enable: false
+
     jsdelivr:
-        enable: true
+        enable: false
         gh_user: qinyuanpei
         gh_repo: blog.yuanpei.me
         baseUrl: cdn.jsdelivr.net
