--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -24,16 +24,19 @@ jobs:
         with:
           python-version: "3.7"
           architecture: "x64"
-        run: sudo sh ./before-build.sh
 
       - name: Setup Dependency
         run: |
+          sudo apt-get remove python2.7
+          sudo apt-get remove --auto-remove python2.7
+          sudo apt-get purge python2.7 or sudo apt-get purge --auto-remove python2.7
           python -m pip install pip -U
           python -m pip config set global.index-url http://mirrors.aliyun.com/pypi/simple/
           python -m pip config set install.trusted-host mirrors.aliyun.com
 
       - name: Build Site
         run: |
+          sudo sh ./before-build.sh
           hugo --minify
           sudo mkdir -p /home/runner/work/artifacts/blog.yuanpei.me
           sudo cp -r /home/runner/work/hugo-blog/hugo-blog/public/* /home/runner/work/artifacts/blog.yuanpei.me
