--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Setup Dependency
         run: |
           sudo apt-get remove --auto-remove python2.7
+          sudo rm /usr/bin/python
+          sudo ln -s /usr/bin/python3.7 /usr/bin/python
+          sudo python --version
           python -m pip install pip -U
           python -m pip config set global.index-url http://mirrors.aliyun.com/pypi/simple/
           python -m pip config set install.trusted-host mirrors.aliyun.com
