--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Setup Dependency
         run: |
+          sudo python --version
           sudo apt-get remove --auto-remove python2.7
           sudo rm /usr/bin/python
           sudo ln -s /usr/bin/python3.7 /usr/bin/python
