--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Setup Dependency
         run: |
-          sudo rm /usr/bin/python
-          sudo ln -s /usr/bin/python3.7 /usr/bin/python
+          sudo rm -rf /usr/bin/python
+          sudo ln -s /usr/bin/python3  /usr/bin/python
           sudo python --version
           python -m pip install pip -U
           python -m pip config set global.index-url http://mirrors.aliyun.com/pypi/simple/
