--- a/.github/workflows/Douban.yml
+++ b/.github/workflows/Douban.yml
@@ -15,25 +15,22 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
     - name: Sync Movies
       uses: lizheming/doumark-action@master
       with:
         id: 60029335
         type: movie
         format: json
-        dir: ./data/douban
-
+        dir: ./themes/hugo-theme-stack/data/
     - name: Sync Books
       uses: lizheming/doumark-action@master
       with:
         id: 60029335
         type: book
         format: json
-        dir: ./data/douban
-  
+        dir: ./themes/hugo-theme-stack/data/
     - name: Auto Commit
       uses: EndBug/add-and-commit@v8
       with:
-        message: 'chore: update douban data'
-        add: './data/douban'
+        message: 'Update Douban Data'
+        add: ./themes/hugo-theme-stack/data/
