--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -39,6 +39,7 @@ jobs:
         env:
           GH_REPO: github.com/qinyuanpei/hugo-blog.git
         run: |
+          git checkout -b cicd
           sudo sh ./before-build.sh
           hugo --minify
           sudo sh ./after-build.sh
@@ -49,8 +50,7 @@ jobs:
           git config user.email "qinyuanpei@163.com"
           sudo git add ./
           git commit -m "Automaticly Update README.md for repository."
-          git status 
-          git push --tags --force --quiet "https://${{ secrets.CI_TOKEN }}@$GH_REPO" blog:blog
+          git push --tags --force --quiet "https://${{ secrets.CI_TOKEN }}@$GH_REPO" cicd:blog
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
