增加图书的处理

--- a/.github/workflows/Douban-Sync.yml
+++ b/.github/workflows/Douban-Sync.yml
@@ -17,19 +17,19 @@ jobs:
       with:
         id: 60029335
         type: movie
-        format: csv
-        dir: ./data/douban
+        format: json
+        dir: ./data/douban-sync
 
-    - name: music
+    - name: book
       uses: lizheming/doumark-action@master
       with:
         id: 60029335
-        type: music
-        format: csv
-        dir: ./data/douban
+        type: book
+        format: json
+        dir: ./data/douban-sync
   
     - name: Commit
       uses: EndBug/add-and-commit@v8
       with:
         message: 'chore: update douban data'
-        add: './data/douban'
+        add: './data/douban-sync'
