一定要亲自编译 lxml

--- a/.github/workflows/Douban.yml
+++ b/.github/workflows/Douban.yml
@@ -22,9 +22,9 @@ jobs:
         architecture: "x64"
     - name: Run Generator
       run: |
-          sudo apt-get install python3-lxml
-          # sudo apt-get install libxml2-dev libxslt-dev python-dev
-          # sudo apt-get build-dep python3-lxml
+          # sudo apt-get install python3-lxml
+          sudo apt-get install libxml2-dev libxslt-dev python-dev
+          sudo apt-get build-dep python3-lxml
           sudo mkdir -p /home/runner/work/
           cd /home/runner/work/
           sudo git clone https://github.com/qinyuanpei/douban-generator.git 
