--- a/.github/workflows/Douban.yml
+++ b/.github/workflows/Douban.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   douban:
     name: Sync Douban Data
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
