--- a/.github/workflows/Douban-Sync.yml
+++ b/.github/workflows/Douban-Sync.yml
@@ -54,4 +54,4 @@ jobs:
       uses: EndBug/add-and-commit@v9
       with:
         message: 'chore: update douban data'
-        add: './data/doubanSync'
+        add: './data/doubanSync/*'
