--- a/.github/workflows/Douban-Sync.yml
+++ b/.github/workflows/Douban-Sync.yml
@@ -56,5 +56,5 @@ jobs:
     - name: Commit
       uses: EndBug/add-and-commit@v9
       with:
-        message: 'chore: update douban data'
-        add: '.'
+        message: 'Update Douban Data'
+        add: './data/doubanSync/'
