支持配置是否显示摘要

--- a/config.yaml
+++ b/config.yaml
@@ -57,6 +57,7 @@ params:
         toc: true
         readingTime: true
         sharejs: false
+        showSummary: false
         reward: 
             enabled: true
             providers:
