--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Build Site
         run: |
-          python -m pip install tinify
+          sudo python -m pip install tinify
+          sudo python -m pip install -r requirements.txt 
           sudo sh ./before-build.sh
           hugo --minify
           sudo sh ./after-build.sh
